prusti-tests/tests/verify/fail/no-annotations/external-call-fail.rs
fn test(x: i32) {
    let is_pos = x.is_positive();
    assert!(is_pos); //~ ERROR the asserted expression might not hold
}

fn main(){}
